# active-passive-alternations

./: .gitignore  README.md  UID.ipynb  changelog.md  gum_uid_exploration.ipynb  main.py  passive_active_switch.ipynb  passives.csv  pyproject.toml
.ipynb_checkpoints/: UID-checkpoint.ipynb
src/: uid.py  utils.py
src/units/: __init__.py  document.py  sentence.py  word.py
