[project]
name = "active-passive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "conllu>=6.0.0",
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "pyinflect>=0.5.1",
    "stanza>=1.11.0",
    "transformers>=5.0.0",
    "units>=0.7",
]
